--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ node_modules
 /.svelte-kit
 /package
 .env
+.eslintignore
+.eslintrc.cjs
+.prettierignore
+.npmrc
+/.vscode
 .env.*
 !.env.example
 vite.config.js.timestamp-*
