--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "mdsvex": "^0.12.3",
     "postcss": "8.4.41",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
@@ -39,5 +40,8 @@
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "^0.3.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-markdown": "^0.4.1"
+  }
 }
