--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
+	"types": [
+		"node",
+		"svelte"
+	],
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
