--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "highlight.js": "^11.10.0",
+    "shiki": "^1.15.2",
     "svelte-markdown": "^0.4.1"
   }
 }
