--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.14",
     "@types/eslint": "^8.56.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "22.5.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -28,6 +29,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "fs-extra": "^11.2.0",
     "mdsvex": "^0.12.3",
     "postcss": "8.4.41",
     "prettier": "^3.1.1",
