--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@types/yaml-front-matter": "^4.1.3",
     "highlight.js": "^11.10.0",
     "shiki": "^1.15.2",
-    "svelte-markdown": "^0.4.1"
+    "svelte-markdown": "^0.4.1",
+    "yaml-front-matter": "^4.1.1"
   }
 }
