--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-youtube-embed": "^0.3.0",
     "tailwindcss": "3.4.10",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
