--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@sveltejs/enhanced-img": "^0.3.10",
     "@types/yaml-front-matter": "^4.1.3",
     "highlight.js": "^11.10.0",
+    "mdsvex-enhanced-images": "^0.2.3",
     "shiki": "^1.15.2",
     "svelte-markdown": "^0.4.1",
     "yaml-front-matter": "^4.1.1"
